force-app/main/default/objects/KimbleOne__BaselinePlan__c/KimbleOne__BaselinePlan__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Z_Obsolete - Baseline Plan</label>
    <nameField>
        <label>Baseline Plan Version</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Obsolete - Baseline Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>