force-app/main/default/objects/KimbleOne__BaselinePlan__c/fields/KimbleOne__BaselineDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineDate__c</fullName>
    <label>Z_Obsolete - Baseline Date</label>
    <type>Date</type>
</CustomField>