force-app/main/default/objects/KimbleOne__BaselinePlan__c/fields/KimbleOne__BaselineDescription__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineDescription__c</fullName>
    <label>Z_Obsolete - Baseline Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>