force-app/main/default/objects/KimbleOne__BaselinePlan__c/fields/KimbleOne__IsLatest__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsLatest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Z_Obsolete - Is Latest</label>
    <type>Checkbox</type>
</CustomField>