force-app/main/default/objects/KimbleOne__BaselinePlan__c/fields/KimbleOne__OriginalContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__OriginalContractRevenue__c</fullName>
    <label>Z_Obsolete - Original Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>