force-app/main/default/objects/KimbleOne__BaselinePlan__c/fields/KimbleOne__PlanStatus__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PlanStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Obsolete - Baseline Status</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>PlanStatus</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipName>BaselinePlans</relationshipName>
    <type>Lookup</type>
</CustomField>