force-app/main/default/objects/KimbleOne__BaselinePlan__c/fields/KimbleOne__PreviousBaselinePlan__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PreviousBaselinePlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Obsolete - Previous Baseline Plan</label>
    <referenceTo>KimbleOne__BaselinePlan__c</referenceTo>
    <relationshipName>Baseline_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>