force-app/main/default/objects/KimbleOne__BaselinePlan__c/fields/KimbleOne__ResourcedActivity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcedActivity__c</fullName>
    <label>Z_Obsolete - Resourced Activity</label>
    <referenceTo>KimbleOne__ResourcedActivity__c</referenceTo>
    <relationshipName>BaselinePlans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>