force-app/main/default/objects/KimbleOne__BaselinePlan__c/fields/KimbleOne__TotalContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TotalContractRevenue__c</fullName>
    <formula>KimbleOne__OriginalContractRevenue__c + KimbleOne__ChangeControlRevenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Obsolete - Total Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>